comentario en style.css

--- a/css/style.css
+++ b/css/style.css
@@ -186,3 +186,10 @@ input#cobertura {
 .decoracion-options input {
     margin-right: 5px;
 }
+
+.decoracion-option input {
+    margin-right: 15px;
+}
+/*
+54545454
+*/
