ante ultima correcion

--- a/templates/crea_tu_torta.html
+++ b/templates/crea_tu_torta.html
@@ -9,7 +9,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
-    <title>Dulce Tentacion - Crear tu Torta</title>
+    <link rel="icon"  href="img/dulceicon.ico">
+    <style>
+        /* Aplicar un borde redondeado al ícono en la pestaña del navegador */
+        /* Esto hará que el ícono sea circular */
+        /* Ajusta el tamaño según tus preferencias */
+        link[rel="icon"] {
+          border-radius: 50%;
+          width: 32px;
+          height: 32px;
+        }
+      </style>
+    <title>DulceTentacion</title>
 
 </head>
 
@@ -18,8 +29,8 @@
 
        <nav>
             <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="crear-torta.html">Crear tu Torta</a></li>
+                <li><a href="../index2.html">Inicio</a></li>
+                <li><a href="crea_tu_torta.html">Crear tu Torta</a></li>
                 <li><a href="catalogo.html">Catálogo</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
