--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,5 @@
-/*
-Estilos
-*/
-
 body {
-    /*font-family: Arial, sans-serif;*/
-    font-family: 'Montserrat', sans-serif;
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -190,36 +185,117 @@ input#cobertura {
 
 .decoracion-options input {
     margin-right: 5px;
-    width: 20%;
+}
+/*primer comentario
+segundo comentario*/
+/*------------------------ carrusel*/
+.carousel-container {
+    width: 300px; /* Ancho del carrusel */
+    overflow: hidden;
+    white-space: nowrap;
+    border: 1px solid #ccc;
+    position: relative;
 }
 
-.intro-paragraph {
-    font-size: 18px;
-    color: #333;
-    margin-bottom: 20px;
-    text-align: center;
-    padding: 10px;
-    background-color: #f9f9f9;
-    border-radius: 10px;
-}
-@media (max-width: 768px) {
-    .intro-paragraph {
-        font-size: 16px;
-        padding: 5px;
-    }
-}
-/* fuente Google fonts*/
-@font-face {
-    font-family: 'Montserrat', sans-serif;
-    src: url('Montserrat-ExtraLight.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+.carousel-slide {
+    width: 300px; /* Ancho de cada imagen */
+    display: inline-block;
+    vertical-align: top;
+    transition: transform 1s;
 }
 
-.decoracion-options {
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+/* Clase que realiza la animación de desplazamiento */
+.animate {
+    transform: translateX(600px); /* Ajusta el valor según el ancho de las imágenes */
+    animation: slide 2s;
+}
+
+@keyframes slide {
+    0%, 100% { transform: translateX(0); }
+    20% { transform: translateX(0); }
+    25%, 45% { transform: translateX(-300px); }
+    50%, 70% { transform: translateX(-600px); }
+    75%, 95% { transform: translateX(0); }
+}
+
+/*--------------------*/
+.gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /* Ajusta según tus preferencias */
-    gap: 10px; /* Añade espacio entre elementos (ajusta según tus preferencias) */
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
+.photo {
+    position: relative;
+    overflow: hidden;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.caption {
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 5px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+}
+/*----------------------*/
+.contacto{
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    background: #f2f2f2;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.contact-form h2 {
+    text-align: center;
+}
+
+.contact-form form {
+    display: grid;
+    gap: 10px;
+}
+
+label {
+    font-weight: bold;
+}
+
+input[type="text"],
+input[type="email"],input[type="telefono"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+input[type="submit"] {
+    background: #007BFF;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background: #0056b3;
+}
