correcion de styles. ahora coinciden las 4 solapas

--- a/templates/catalogo.html
+++ b/templates/catalogo.html
@@ -53,7 +53,7 @@
             <img class="logo" src="../img/dulce2.png" alt="">
         </div>
         <nav>
-            <a href="../index2.html">INICIO</a>
+            <a href="../index.html">INICIO</a>
             <a href="crea_tu_torta.html">CREA TU TORTA</a>
             <a href="catalogo.html">CATÁLOGO</a>
             <a href="contacto.html">CONTACTO</a>
@@ -71,7 +71,7 @@
 
 
 
-        <!-- Añadir más opciones según sea necesario -->
+      
         </div>
 
         <div class="gallery">
@@ -86,6 +86,10 @@
             <div class="photo">
                 <img src="../img/torta3.jpg" alt="Foto 3">
                 <div class="caption">Torta de chocolate</div>
+            </div>
+            <div class="photo">
+                <img src="../img/torta oreo.jpg" alt="Foto 3">
+                <div class="caption">Torta Oreo</div>
             </div>
         </div>
     </main>
