--- a/templates/crea_tu_torta.html
+++ b/templates/crea_tu_torta.html
@@ -27,7 +27,7 @@
             <img class="logo" src="../img/dulce2.png" alt="">
         </div>
         <nav>
-            <a href="../index2.html">INICIO</a>
+            <a href="../index.html">INICIO</a>
             <a href="crea_tu_torta.html">CREA TU TORTA</a>
             <a href="catalogo.html">CATÁLOGO</a>
             <a href="contacto.html">CONTACTO</a>
