--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -22,24 +22,25 @@
           height: 32px;
         }
       </style>
-    <title>DulceTentacion</title>
+    <title>Contacto - DulceTentacion</title>
 
 </head>
 
 <body>
     <header>
-
-       <nav>
-            <ul>
-                <li><a href="../index2.html">Inicio</a></li>
-                <li><a href="crea_tu_torta.html">Crear tu Torta</a></li>
-                <li><a href="catalogo.html">Catálogo</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav> 
+        <div class="header-linea">
+            <img class="logo" src="../img/dulce2.png" alt="">
+        </div>
+        <nav>
+            <a href="../index2.html">INICIO</a>
+            <a href="crea_tu_torta.html">CREA TU TORTA</a>
+            <a href="catalogo.html">CATÁLOGO</a>
+            <a href="contacto.html">CONTACTO</a>
+        </nav>
 
     </header>
     <main>
+        <h1>Formulario de Contacto</h1>
         <div id="mi_contenedor">
             <div>
                 <!-- Contenido de la primer columna -->
@@ -65,6 +66,7 @@
                     <input type="submit" value="Enviar">
                     <input type="reset" value="Borrar">
                 </form>
+                <iframe src="https://www.google.com/maps/d/embed?mid=1K9QFMV9cT4NIlaNJh_93Dpg-hz0dFVU&ehbc=2E312F&noprof=1" width="80%" height="270"></iframe>            
             </div>
             <div>
                 <!-- Contenido de la segunda columna -->
