--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,76 @@
+@font-face {
+    font-family: 'Oswald';
+    src: url('../font/Oswald-Regular.ttf') format('woff');
+
+}
+
+@font-face {
+    font-family: 'Barlow';
+    src: url('../font/Barlow-Light.ttf') format('woff');
+}
+
 body {
-    font-family: Arial, sans-serif;
+    /* font-family: Arial, sans-serif; */
+    font-family: 'Barlow';
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #fcefd0; /* Color de fondo pastel */
+    background-color: #fcefd0;
+    /* Color de fondo pastel */
 }
 
+
 header {
-    background-color: #f8f8f8;
-    padding: 20px;
-    text-align: center;
+    background-color: #ad8552;
+    color: #fff;
+    /* padding: 10px; */
+    display: grid;
+    grid-template-columns: 0.1fr 2fr;
+    align-items: center;
+}
+
+.header-linea {
+    display: inline-block;
+    /*Situa en linea el div y el nav*/
+    /*padding-right: 22vw; /*Separación a la derecha*/
+    padding-top: 1vh;
+    /*Separación superior para el menu y logo*/
+    align-items: flex-end;
 }
 
 nav {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    max-width: 600px;
+    padding: 10px;
+    background-color: #ad8552;
+
 }
 
-nav ul {
-    list-style: none;
-    padding: 0;
-    display: flex;
+nav a {
+    color: #ffcbc2;
+    /* Color de texto de enlaces (rosa) */
+    text-decoration: none;
+    text-align: center;
+    padding: 10px;
+    border-bottom: 2px solid transparent;
+    font-family: 'Oswald';
 }
 
-nav ul li {
-    margin-right: 20px;
+nav a:hover {
+    border-bottom: 2px solid #ffcbc2;
+    /* Color del subrayado al pasar el cursor (rosa) */
 }
 
 main {
     display: grid;
     place-items: center;
     padding: 20px;
-    gap: 20px;
-    
-    margin-bottom: 70px; /* Ajusta el margen inferior para dejar espacio al footer */
+    /* gap: 20px; */
+
+    margin-bottom: 70px;
+    /* Ajusta el margen inferior para dejar espacio al footer */
 
 }
 
@@ -43,76 +79,56 @@ form {
     max-width: 600px;
     display: grid;
     gap: 15px;
-    background-color: #ffffff; /* Fondo del formulario */
+    background-color: #ffffff;
+    /* Fondo del formulario */
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
-    grid-template-columns: repeat(2, 1fr); /* Dos columnas en la cuadrícula */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    /* Sombra suave */
+    grid-template-columns: repeat(2, 1fr);
+    /* Dos columnas en la cuadrícula */
 }
 
 label {
     font-weight: bold;
-    color: #555; /* Color de texto suave */
+    color: #555;
+    /* Color de texto suave */
 }
 
-input, select {
+input,
+select {
     width: 100%;
     padding: 10px;
     box-sizing: border-box;
-    border: 1px solid #ddd; /* Borde del input */
+    border: 1px solid #ddd;
+    /* Borde del input */
     border-radius: 5px;
 }
 
 button {
-    background-color: #6aa84f; /* Color del botón */
+    background-color: #ad8552;
+    /* Cambia el color de fondo del botón */
     color: white;
     padding: 15px;
     border: none;
     cursor: pointer;
     border-radius: 5px;
-    transition: background-color 0.3s ease; /* Transición suave del color de fondo */
+    transition: background-color 0.3s ease;
 }
 
 button:hover {
-    background-color: #4d7b3a; /* Color del botón al pasar el ratón */
+    background-color: #8b5a2b;
+    /* Cambia el color de fondo al pasar el ratón */
 }
 
 footer {
-    background-color: #333;
-    color: white;
-    padding: 10px;
+    background-color: #2b241c;
+    /* Color de fondo del footer (rosa) */
+    color: #eeaaa7;
+    /* Color de texto del footer (chocolate) */
     text-align: center;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
-/* select#cobertura {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
     padding: 10px;
-    width: 100%;
-    box-sizing: border-box;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    background-image: url('../img/cobertura_chocolate1.jpg'); 
-    background-size: cover;
-    background-position: center;
-    cursor: pointer;
 }
-
-select#cobertura option[value="chocolate"] {
-    background-image: url('../img/cobertura_chocolate2.jpg');
-}
-
-select#cobertura option[value="vainilla"] {
-    background-image: url('../img/cobertura_vainilla2.jpg');
-}
-
-select#cobertura option[value="fresa"] {
-    background-image: url('../img/cobertura_fresa1.jpg');
-}*/
 
 input#cobertura {
     display: none;
@@ -124,7 +140,8 @@ input#cobertura {
 }
 
 .custom-select select {
-    display: none; /* Oculta el select original */
+    display: none;
+    /* Oculta el select original */
 }
 
 .select-selected {
@@ -138,9 +155,12 @@ input#cobertura {
 }
 
 .select-selected img {
-    width: 60%; /* Tamaño ajustado de las imágenes con porcentaje */
-    max-width:60px; /* Establece un ancho máximo para imágenes más grandes */
-    height: auto; /* Mantiene la proporción de aspecto */
+    width: 60%;
+    /* Tamaño ajustado de las imágenes con porcentaje */
+    max-width: 60px;
+    /* Establece un ancho máximo para imágenes más grandes */
+    height: auto;
+    /* Mantiene la proporción de aspecto */
     margin-right: 10px;
 }
 
@@ -162,10 +182,14 @@ input#cobertura {
     display: flex;
     align-items: center;
 }
+
 .select-item img {
-    width: 40%; /* Tamaño ajustado de las imágenes en las opciones con porcentaje */
-    max-width: 60px; /* Establece un ancho máximo para imágenes más grandes */
-    height: auto; /* Mantiene la proporción de aspecto */
+    width: 40%;
+    /* Tamaño ajustado de las imágenes en las opciones con porcentaje */
+    max-width: 60px;
+    /* Establece un ancho máximo para imágenes más grandes */
+    height: auto;
+    /* Mantiene la proporción de aspecto */
     margin-right: 10px;
 }
 
@@ -201,17 +225,20 @@ input#cobertura {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-  }
-  
-  #mi_contenedor > div {
-    width: 50%;
-  }
+}
+
+#mi_contenedor>div {
+    width: 80%;
+}
+
 =======
+
 /*primer comentario
 segundo comentario*/
 /*------------------------ carrusel*/
 .carousel-container {
-    width: 300px; /* Ancho del carrusel */
+    width: 300px;
+    /* Ancho del carrusel */
     overflow: hidden;
     white-space: nowrap;
     border: 1px solid #ccc;
@@ -219,7 +246,8 @@ segundo comentario*/
 }
 
 .carousel-slide {
-    width: 300px; /* Ancho de cada imagen */
+    width: 300px;
+    /* Ancho de cada imagen */
     display: inline-block;
     vertical-align: top;
     transition: transform 1s;
@@ -232,16 +260,36 @@ img {
 
 /* Clase que realiza la animación de desplazamiento */
 .animate {
-    transform: translateX(600px); /* Ajusta el valor según el ancho de las imágenes */
+    transform: translateX(600px);
+    /* Ajusta el valor según el ancho de las imágenes */
     animation: slide 2s;
 }
 
 @keyframes slide {
-    0%, 100% { transform: translateX(0); }
-    20% { transform: translateX(0); }
-    25%, 45% { transform: translateX(-300px); }
-    50%, 70% { transform: translateX(-600px); }
-    75%, 95% { transform: translateX(0); }
+
+    0%,
+    100% {
+        transform: translateX(0);
+    }
+
+    20% {
+        transform: translateX(0);
+    }
+
+    25%,
+    45% {
+        transform: translateX(-300px);
+    }
+
+    50%,
+    70% {
+        transform: translateX(-600px);
+    }
+
+    75%,
+    95% {
+        transform: translateX(0);
+    }
 }
 
 /*--------------------*/
@@ -276,8 +324,9 @@ img {
     width: 100%;
     text-align: center;
 }
+
 /*----------------------*/
-.contacto{
+.contacto {
     max-width: 400px;
     margin: 0 auto;
     padding: 20px;
@@ -300,7 +349,8 @@ label {
 }
 
 input[type="text"],
-input[type="email"],input[type="telefono"],
+input[type="email"],
+input[type="telefono"],
 textarea {
     width: 100%;
     padding: 10px;
@@ -319,4 +369,37 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
     background: #0056b3;
+}
+
+
+.decoracion-option {
+    display: flex;
+    /* Usar flexbox para alinear elementos en una fila */
+    align-items: center;
+    /* Centrar verticalmente los elementos */
+    margin-right: 10px;
+    /* Agregar espacio entre los elementos */
+}
+
+.decoracion-option input {
+    width: 20%;
+}
+
+.decoracion-option label {
+    width: 100%;
+}
+
+.intro-paragraph {
+    background-color: #F4A460;
+
+    border: 2px solid #D2691E;
+
+    border-radius: 10px;
+
+    padding: 20px;
+
+    font-size: 18px;
+
+    text-align: center;
+    font-weight: bold;
 }
