agregando animaciones y retoques de estilo

--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="../css/style.css"
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../img/dulceicon.ico">
     <script src="../js/validaciones.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
 </head>
+
 <body>
     <header>
         <div class="header-linea">
@@ -21,11 +24,16 @@
 
     </header>
     <main>
+        <h1>¡Contáctanos!</h1>
+        <p class="intro-paragraph">Estamos aquí para responder a tus preguntas, tomar tus pedidos y ayudarte en todo lo que necesites. Si
+            tienes alguna consulta o comentario, no dudes en ponerte en contacto con nosotros. Tu opinión es importante
+            y valoramos la oportunidad de servirte mejor.</p>
         <div id="mi_contenedor">
+
             <div>
                 <!-- Contenido de la primer columna -->
-              <form id="formularioContacto" onsubmit="return validarFormulario()">
-                <!--  Crear campos para el formulario  -->
+                <form id="formularioContacto" onsubmit="return validarFormulario()">
+                    <!--  Crear campos para el formulario  -->
                     <label for="nombre">Nombre:</label> <br>
                     <input type="text" name="nombre" id="nombre" maxlength="10"> <br>
 
@@ -50,7 +58,9 @@
             <div>
                 <!-- Contenido de la segunda columna -->
                 <p>Nos encontras en: </p>
-                <iframe src="https://www.google.com/maps/d/embed?mid=1K9QFMV9cT4NIlaNJh_93Dpg-hz0dFVU&ehbc=2E312F&noprof=1" width="80%" height="270"></iframe>            
+                <iframe
+                    src="https://www.google.com/maps/d/embed?mid=1K9QFMV9cT4NIlaNJh_93Dpg-hz0dFVU&ehbc=2E312F&noprof=1"
+                    width="80%" height="270"></iframe>
             </div>
         </div>
 
@@ -58,4 +68,5 @@
 
 
 </body>
+
 </html>
