--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,9 @@
+link[rel="icon"] {
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+}
+
 @font-face {
     font-family: 'Oswald';
     src: url('../font/Oswald-Regular.ttf') format('woff');
@@ -8,11 +14,7 @@
     font-family: 'Barlow';
     src: url('../font/Barlow-Light.ttf') format('woff');
 }
-link[rel="icon"] {
-    border-radius: 50%;
-    width: 32px;
-    height: 32px;
-}
+
 body {
     /* font-family: Arial, sans-serif; */
     font-family: 'Barlow';
@@ -23,7 +25,11 @@ body {
     /* Color de fondo pastel */
 }
 
-
+link[rel="icon"] {
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+}
 header {
     background-color: #ad8552;
     color: #fff;
@@ -40,6 +46,10 @@ header {
     padding-top: 1vh;
     /*Separación superior para el menu y logo*/
     align-items: flex-end;
+}
+
+h1 {
+    text-align: center;
 }
 
 nav {
@@ -69,12 +79,10 @@ nav a:hover {
 
 main {
     display: grid;
-    place-items: center;
+    /* place-items: center; */
     padding: 20px;
-    /* gap: 20px; */
-
     margin-bottom: 70px;
-    /* Ajusta el margen inferior para dejar espacio al footer */
+
 
 }
 
@@ -201,7 +209,6 @@ input#cobertura {
     border-bottom: none;
 }
 
-/*css para los checkbox*/
 .decoracion-options {
     display: flex;
     flex-direction: column;
@@ -225,65 +232,6 @@ input#cobertura {
     width: 80%;
 }
 
-
-
-/*primer comentario
-segundo comentario*/
-/*------------------------ carrusel*/
-/* .carousel-container {
-    width: 300px;
-    overflow: hidden;
-    white-space: nowrap;
-    border: 1px solid #ccc;
-    position: relative;
-} */
-
-/* .carousel-slide {
-    width: 300px;
-    display: inline-block;
-    vertical-align: top;
-    transition: transform 1s;
-} */
-
-/* img {
-    max-width: 100%;
-    height: auto;
-} */
-
-/* Clase que realiza la animación de desplazamiento */
-/* .animate {
-    transform: translateX(600px);
-    animation: slide 2s;
-} */
-
-/* @keyframes slide {
-
-    0%,
-    100% {
-        transform: translateX(0);
-    }
-
-    20% {
-        transform: translateX(0);
-    }
-
-    25%,
-    45% {
-        transform: translateX(-300px);
-    }
-
-    50%,
-    70% {
-        transform: translateX(-600px);
-    }
-
-    75%,
-    95% {
-        transform: translateX(0);
-    }
-} */
-
-/*--------------------*/
 .gallery {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -362,7 +310,6 @@ input[type="submit"]:hover {
     background: #0056b3;
 }
 
-
 .decoracion-option {
     display: flex;
     /* Usar flexbox para alinear elementos en una fila */
@@ -393,4 +340,49 @@ input[type="submit"]:hover {
 
     text-align: center;
     font-weight: bold;
+}
+
+.d4 {
+    background-image: url('../img/dtentacion1.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* Cambia a "cover" para que la imagen ocupe todo el espacio disponible */
+    width: 80%;
+    height: 500px;
+    /* Aumenta la altura para hacer la imagen más grande */
+    position: relative;
+    margin-top: 5vh;
+    margin-left: 10vw;
+    /* Puedes ajustar el margen izquierdo según tus necesidades */
+    margin-bottom: 10vh;
+    animation-name: cambiar;
+    animation-duration: 10s;
+    animation-delay: 3s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes cambiar {
+    0% {
+        background-image: url('../img/dtentacion1.jpg');
+        left: 0vw;
+        top: 0vh;
+    }
+
+    25% {
+        background-image: url('../img/dtentacion2.jpg');
+        left: 0vw;
+        top: 0vh;
+    }
+
+    50% {
+        background-image: url('../img/dtentacion3.jpg');
+        left: 0vw;
+        top: 0vh;
+    }
+
+    100% {
+        background-image: url('../img/dtentacion4.jpg');
+        left: 0vw;
+        top: 0vh;
+    }
 }
