--- a/templates/catalogo.html
+++ b/templates/catalogo.html
@@ -6,42 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
 
-    <link rel="icon" href="img/dulceicon.ico">
-    <style>
-        /* Aplicar un borde redondeado al ícono en la pestaña del navegador */
-        /* Esto hará que el ícono sea circular */
-        /* Ajusta el tamaño según tus preferencias */
-        link[rel="icon"] {
-            border-radius: 50%;
-            width: 32px;
-            height: 32px;
-        }
-
-        /* style.css */
-
-        /* Agrega un estilo base para las imágenes en el catálogo */
-        .photo {
-            position: relative;
-            overflow: hidden;
-            width: 300px;
-            /* Ajusta el tamaño según tus necesidades */
-            height: 200px;
-            /* Ajusta el tamaño según tus necesidades */
-        }
-
-        .photo img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: opacity 0.5s;
-            /* Animación de desvanecimiento de 0.5 segundos */
-        }
-
-        .photo:hover img {
-            opacity: 0.7;
-            /* Cambia la opacidad al pasar el cursor sobre la imagen */
-        }
-    </style>
+    <link rel="icon" href="../img/dulceicon.ico">
+     <link rel="stylesheet" href="../css/catalogo.css">
     <title>Catálogo de imagenes - DulceTentacion</title>
 
 
