--- a/templates/catalogo.html
+++ b/templates/catalogo.html
@@ -43,7 +43,7 @@
         <div class="gallery">
             <div class="photo">
                 <img src="../img/torta1.jpg" alt="Foto 1">
-                <div class="caption">Chescake de frutos rojos</div>
+                <div class="caption">Chescake de Frutos Rojos</div>
             </div>
             <div class="photo">
                 <img src="../img/torta2.jpg" alt="Foto 2">
@@ -51,11 +51,11 @@
             </div>
             <div class="photo">
                 <img src="../img/torta3.jpg" alt="Foto 3">
-                <div class="caption">Torta de chocolate</div>
+                <div class="caption">Torta de Chocolate</div>
             </div>
             <div class="photo">
                 <img src="../img/torta oreo.jpg" alt="Foto 3">
-                <div class="caption">Torta Oreo</div>
+                <div class="caption" >Torta Oreo</div>
             </div>
         </div>
     </main>
