--- a/css/index.css
+++ b/css/index.css
@@ -261,7 +261,7 @@ img {
     bottom: 0;
     left: 0;
     width: 100%;
-    text-align: center;
+    text-align: left;
 }
 
 /*----------------------*/
