--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -4,6 +4,9 @@
 <head>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../img/dulceicon.ico">
+
+   
+
     <script src="../js/validaciones.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,17 +58,37 @@
                     <input type="reset" value="Borrar">
                 </form>
             </div>
-            <div>
+            <div class="header-linea">
                 <!-- Contenido de la segunda columna -->
-                <p>Nos encontras en: </p>
+                <h1>Nos encontras en: </h1>
                 <iframe
                     src="https://www.google.com/maps/d/embed?mid=1K9QFMV9cT4NIlaNJh_93Dpg-hz0dFVU&ehbc=2E312F&noprof=1"
                     width="80%" height="270"></iframe>
             </div>
+            <div>
+                <h1>
+                    <p>Seguinos</p>
+                    <i class="fa-brands fa-instagram"> dulce_tentacion_ok</i> <br>
+                    <i class="fa-brands fa-tiktok"> dulce_tentacion_ok</i><br>
+                    <i class="fa-brands fa-facebook"> dulce_tentacion_sgo</i>
+               
+                </h1>
+                    
+            </div>
         </div>
 
+    </div>
+    
     </main>
 
+    <footer>
+        
+            <p>&copy; 2023 Dulce Tentacion. Todos los derechos reservados.</p>
+            <p>Pelegrini y Av. Belgrano Sur - Santiago del Estero, Capital</p>
+       
+    </footer>
+
+ <script src="https://kit.fontawesome.com/ee0c7cd32f.js" crossorigin="anonymous"></script>
 
 </body>
 
