--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../img/dulceicon.ico">
 
-   
+
 
     <script src="../js/validaciones.js"></script>
     <meta charset="UTF-8">
@@ -28,7 +28,8 @@
     </header>
     <main>
         <h1>¡Contáctanos!</h1>
-        <p class="intro-paragraph">Estamos aquí para responder a tus preguntas, tomar tus pedidos y ayudarte en todo lo que necesites. Si
+        <p class="intro-paragraph">Estamos aquí para responder a tus preguntas, tomar tus pedidos y ayudarte en todo lo
+            que necesites. Si
             tienes alguna consulta o comentario, no dudes en ponerte en contacto con nosotros. Tu opinión es importante
             y valoramos la oportunidad de servirte mejor.</p>
         <div id="mi_contenedor">
@@ -58,37 +59,33 @@
                     <input type="reset" value="Borrar">
                 </form>
             </div>
-            <div class="header-linea">
+            <div>
                 <!-- Contenido de la segunda columna -->
-                <h1>Nos encontras en: </h1>
+                <h2>Nos encontras en: </h2>
                 <iframe
                     src="https://www.google.com/maps/d/embed?mid=1K9QFMV9cT4NIlaNJh_93Dpg-hz0dFVU&ehbc=2E312F&noprof=1"
                     width="80%" height="270"></iframe>
             </div>
             <div>
-                <h1>
-                    <p>Seguinos</p>
-                    <i class="fa-brands fa-instagram"> dulce_tentacion_ok</i> <br>
-                    <i class="fa-brands fa-tiktok"> dulce_tentacion_ok</i><br>
-                    <i class="fa-brands fa-facebook"> dulce_tentacion_sgo</i>
-               
-                </h1>
-                    
+                <p>Seguinos</p>
+                <i class="fa-brands fa-instagram"> dulce_tentacion_ok</i> <br>
+                <i class="fa-brands fa-tiktok"> dulce_tentacion_ok</i><br>
+                <i class="fa-brands fa-facebook"> dulce_tentacion_sgo</i>
             </div>
         </div>
 
-    </div>
-    
+        </div>
+
     </main>
 
     <footer>
-        
-            <p>&copy; 2023 Dulce Tentacion. Todos los derechos reservados.</p>
-            <p>Pelegrini y Av. Belgrano Sur - Santiago del Estero, Capital</p>
-       
+
+        <p>&copy; 2023 Dulce Tentacion. Todos los derechos reservados.</p>
+        <p>Pelegrini y Av. Belgrano Sur - Santiago del Estero, Capital</p>
+
     </footer>
 
- <script src="https://kit.fontawesome.com/ee0c7cd32f.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/ee0c7cd32f.js" crossorigin="anonymous"></script>
 
 </body>
 
