--- a/templates/catalogo.html
+++ b/templates/catalogo.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
 
     <link rel="icon" href="../img/dulceicon.ico">
-     <link rel="stylesheet" href="../css/catalogo.css">
+    <link rel="stylesheet" href="../css/catalogo.css">
     <title>Catálogo de imagenes - DulceTentacion</title>
 
 
@@ -21,6 +21,7 @@
         <nav>
             <a href="../index.html">INICIO</a>
             <a href="crea_tu_torta.html">CREA TU TORTA</a>
+            <a href="pedidos.html">PEDIDOS</a>
             <a href="catalogo.html">CATÁLOGO</a>
             <a href="contacto.html">CONTACTO</a>
         </nav>
@@ -35,10 +36,6 @@
             clásicos pasteles de cumpleaños hasta creaciones únicas,
             nuestras tortas están hechas con amor y los ingredientes más frescos.</p>
 
-
-
-      
-        </div>
 
         <div class="gallery">
             <div class="photo">
@@ -55,7 +52,7 @@
             </div>
             <div class="photo">
                 <img src="../img/torta oreo.jpg" alt="Foto 3">
-                <div class="caption" >Torta Oreo</div>
+                <div class="caption">Torta Oreo</div>
             </div>
         </div>
     </main>
