Front de pedidos

--- a/templates/crea_tu_torta.html
+++ b/templates/crea_tu_torta.html
@@ -190,7 +190,7 @@
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
-    <script src="/js/ingresar_pedido.js"></script>
+    <script src="../js/ingresar_pedido.js"></script>
 
 </body>
 
