Front de pedidos

--- a/templates/pedidos.html
+++ b/templates/pedidos.html
@@ -120,7 +120,7 @@
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
-    <script src="/js/pedidos.js"></script>
+    <script src="../js/pedidos.js"></script>
 </body>
 
 </html>
