Front de pedidos

--- a/templates/editar_pedido.html
+++ b/templates/editar_pedido.html
@@ -182,8 +182,8 @@
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
-    <script src="/js/datos_editar.js"></script>
-    <script src="/js/editar_pedido.js"></script>
+    <script src="../js/datos_editar.js"></script>
+    <script src="../js/editar_pedido.js"></script>
 
 </body>
 
